Outline for index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-ng-app="anchorage">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="{{app.description}}">
+    <meta name="keywords" content="anchorage, umbraco, statistics, dashboard, administration, admin">
+    <title data-ng-bind="documentTitle">Anchorage - Umbraco CMS Dashboard</title>
+    <!-- build:css(..) app/css/vendor.css-->
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <!-- endbuild-->
+    <!-- Application styles-->
+    <link id="appcss" rel="stylesheet" href="app/css/app.css">
 </head>
-<body>
+<body data-ng-class="theme()">
+    <div data-preloader></div>
+    <div data-ui-view="" data-autoscroll="false" data-ng-class="layout()" class="layout-container"></div>
 
+    <!-- build:vendor(..) app/js/vendor.js-->
+    <script src="vendor/modernizr/modernizr.custom.js"></script>
+    <script src="vendor/jquery/dist/jquery.min.js"></script>
+    <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <!-- endbuild-->
+
+    <!-- custom js for app -->
+    <script src="app/js/app.js"></script>
 </body>
 </html>
