Added outline files

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="{{app.description}}">
     <meta name="keywords" content="anchorage, umbraco, statistics, dashboard, administration, admin">
     <title data-ng-bind="documentTitle">Anchorage - Umbraco CMS Dashboard</title>
-    <!-- build:css(..) app/css/vendor.css-->
+
+    <!-- vendor styles -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-    <!-- endbuild-->
     <!-- Application styles-->
     <link id="appcss" rel="stylesheet" href="app/css/app.css">
 </head>
-<body data-ng-class="theme()">
+<body>
     <div data-preloader></div>
     <div data-ui-view="" data-autoscroll="false" data-ng-class="layout()" class="layout-container"></div>
 
