Added Centric styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- vendor styles -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link id="centriccss" rel="stylesheet" href="app/css/centric.css">
     <!-- Application styles-->
     <link id="appcss" rel="stylesheet" href="app/css/app.css">
 </head>
