Added Dashboard, Router

--- a/master/core/core.layout.html
+++ b/master/core/core.layout.html
@@ -6,9 +6,9 @@
 <!-- main area -->
 <main>
     <!-- page content -->
-    <section></section>
+    <section ui-view="" ng-class="app.viewAnimation"></section>
     <!-- page footer -->
     <footer>
-        <span></span>
+        <span>Anchorage</span>
     </footer>
 </main>
