--- a/master/dashboard/dashboard.html
+++ b/master/dashboard/dashboard.html
@@ -1,3 +1,6 @@
-<h1>Anchorage Dashboard</h1>
 
-<div ui-view></div>
+<div ng-controller="dashboardController as dash">
+    <h1>Anchorage Dashboard</h1>
+
+    <div></div>
+</div>
