Added Sidebar component

--- a/master/core/core.layout.html
+++ b/master/core/core.layout.html
@@ -1,7 +1,8 @@
 <!-- navbar -->
 <header ng-include="'app/views/header.html'" class="header-container"></header>
 <!-- sidebar -->
-<aside></aside>
+<!-- sidebar-->
+<aside ng-include="'app/views/sidebar.html'" class="sidebar-container"></aside>
 <div></div>
 <!-- main area -->
 <main>
