--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="vendor/oclazyload/dist/ocLazyLoad.js"></script>
     <script src="vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="vendor/angular-resource/angular-resource.js"></script>
     <script src="vendor/angular-route/angular-route.js"></script>
+    <script src="vendor/angular-flot/angular-flot.js"></script>
+    <script src="vendor/material-colors/dist/colors.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
     <!-- end vendor-->
 
     <!-- custom js for app -->
