--- a/master/realtime/realtime.html
+++ b/master/realtime/realtime.html
@@ -1,5 +1,18 @@
 
-<div ng-controller="RealtimeController as realtime">
-    <h1>Realtime Updates</h1>
-    <div></div>
+<div ng-controller="RealtimeController as chart" class="container-fluid">
+    <!-- START row-->
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-heading">
+                    <div class="card-title">Real Time</div>
+                </div>
+                <div class="card-body">
+                    <flot dataset="chart.realTimeData" options="chart.realTimeOptions" class="flot-chart flot-chart-lg"></flot>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END row-->
 </div>
